Performed Forward Prop

--- a/Assignment1/CS416_Assignment1_2020478.ipynb
+++ b/Assignment1/CS416_Assignment1_2020478.ipynb
@@ -523,26 +523,93 @@
     {
       "cell_type": "code",
       "source": [
-        "weights = np.random.rand(*X.shape)\n",
+        "weights = np.random.rand(X.shape[1] + 1)\n",
+        "\n",
+        "weights[0] = 1\n",
         "\n",
         "print(\"Shape of weights: \" + str(weights.shape))\n",
-        "print(\"Single Weight Array: \" + str(weights[0]))"
+        "print(\"Random Weights: \" + str(weights))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-17lH6H5HlPj",
-        "outputId": "cf579779-1de2-43fe-842b-78011c96abad"
+        "outputId": "efab4c2f-f717-4728-ef84-3f5682033cc0"
       },
-      "execution_count": 7,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shape of weights: (46, 2)\n",
-            "Single Weight Array: [0.71506044 0.39013665]\n"
+            "Shape of weights: (3,)\n",
+            "Random Weights: [1.         0.39061671 0.91215857]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Function for forward propoggation ( *y = wx* )\n",
+        "\n",
+        "Linear Regression Equation::\n",
+        "`Y = θ0 + (θ1 x X0) + (θ2 x X1)`\n",
+        "\n",
+        "We assume θ0 = 1"
+      ],
+      "metadata": {
+        "id": "XK9LqFIdWVZt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def forward_prop(w, x):\n",
+        "  y = []\n",
+        "  for row in x:\n",
+        "    y.append(w[0] + row[0]*w[1] + row[1]*w[2])\n",
+        "\n",
+        "  y = np.array(y)\n",
+        "  return y"
+      ],
+      "metadata": {
+        "id": "AYtp9TlCOdTb"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hx = forward_prop(weights, X_train)\n",
+        "print(\"Prediction Shape: \" + str(hx.shape))\n",
+        "print(hx)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PpDYqKkzUfXJ",
+        "outputId": "2e4e8170-1ff0-4ba3-9276-4a98be8d224c"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction Shape: (41,)\n",
+            "[ 561.1465215   587.3178411   487.71057994  877.93667365 1651.09806874\n",
+            " 1176.49876557  555.93757911  903.06706827  721.16844762  742.00205843\n",
+            "  990.43428626  941.21658074  542.78753611 1033.79274111  573.25563952\n",
+            "  837.44346092  486.53872981  392.528869    780.02280449  863.09323866\n",
+            "  565.0526886   693.95620304  652.8105233   712.05549687  849.16196223\n",
+            " 1023.76763179 1007.36172996  335.62975443 1188.60788359  771.03862015\n",
+            "  740.30866643  801.50672356 1229.10109633  473.64837836 1754.74242215\n",
+            "  762.44505252 1523.23547928  518.43837491  602.94250951  472.47652823\n",
+            "  784.96989657]\n"
           ]
         }
       ]
@@ -551,9 +618,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AYtp9TlCOdTb"
+        "id": "ZbMQRcKVU5__"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ]
