Added Predictions, Completed Task1

--- a/Assignment1/CS416_Assignment1_2020478_Task1.ipynb
+++ b/Assignment1/CS416_Assignment1_2020478_Task1.ipynb
@@ -110,7 +110,7 @@
           "height": 301
         },
         "id": "zN8C7O_5DrId",
-        "outputId": "1eea1a84-2e74-4c16-8947-31f185b0ea90"
+        "outputId": "62ecc752-48ce-4238-9d25-a73030ac6d1b"
       },
       "execution_count": 4,
       "outputs": [
@@ -130,7 +130,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0242ac68-fdc2-4c94-aa1f-01228dc998f9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-10f25119-5228-4e3f-a666-f73de752f5a7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -209,7 +209,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0242ac68-fdc2-4c94-aa1f-01228dc998f9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-10f25119-5228-4e3f-a666-f73de752f5a7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -261,12 +261,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0242ac68-fdc2-4c94-aa1f-01228dc998f9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-10f25119-5228-4e3f-a666-f73de752f5a7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0242ac68-fdc2-4c94-aa1f-01228dc998f9');\n",
+              "        const element = document.querySelector('#df-10f25119-5228-4e3f-a666-f73de752f5a7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -286,8 +286,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ec46101e-937e-4a48-ae56-54992f7a68eb\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ec46101e-937e-4a48-ae56-54992f7a68eb')\"\n",
+              "<div id=\"df-9a792a89-20c8-4e3f-a888-59068c262eec\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9a792a89-20c8-4e3f-a888-59068c262eec')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -406,7 +406,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ec46101e-937e-4a48-ae56-54992f7a68eb button');\n",
+              "        document.querySelector('#df-9a792a89-20c8-4e3f-a888-59068c262eec button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -455,7 +455,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t29n2nq2FLRC",
-        "outputId": "eaab099a-0602-4f54-c439-c5023ece336c"
+        "outputId": "61f1e000-3fdb-46bb-8971-b36d6421d736"
       },
       "execution_count": 5,
       "outputs": [
@@ -529,7 +529,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E-JY7hmDDuXR",
-        "outputId": "d61645be-cfe1-46b6-f7e8-041cc0647672"
+        "outputId": "4462e015-876e-45fc-898c-068fecb5f301"
       },
       "execution_count": 8,
       "outputs": [
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-17lH6H5HlPj",
-        "outputId": "ab4e822a-24ec-46f4-c149-b68f0396eef3"
+        "outputId": "f3b129b5-a926-4bfd-e464-63bc82e00383"
       },
       "execution_count": 9,
       "outputs": [
@@ -578,7 +578,7 @@
           "name": "stdout",
           "text": [
             "Shape of weights: (3,)\n",
-            "Random Weights: [1.         0.64212341 0.38474998]\n"
+            "Random Weights: [1.         0.95039757 0.34831999]\n"
           ]
         }
       ]
@@ -628,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PpDYqKkzUfXJ",
-        "outputId": "35ffff93-e964-4c4c-cf36-0603ad42e550"
+        "outputId": "456a7c06-3326-426a-9017-d126cbb03362"
       },
       "execution_count": 11,
       "outputs": [
@@ -637,13 +637,13 @@
           "name": "stdout",
           "text": [
             "Prediction Shape: (41,)\n",
-            "[2.57259112 2.3171462  1.51141404 3.34842149 1.49922427 1.50898957\n",
-            " 0.84300108 2.99848966 2.67031065 1.69244112 1.22121839 2.42065767\n",
-            " 1.53808321 1.70052269 3.07438897 1.77891388 3.03243224 0.57785828\n",
-            " 2.5095549  1.96721438 3.68293091 2.38752325 2.78271184 1.56394422\n",
-            " 4.92762697 1.74658762 1.65445776 2.34785615 1.83548485 1.83225222\n",
-            " 4.3303318  1.29880142 1.68025135 2.15551487 3.37347434 2.64694153\n",
-            " 2.06661764 1.54050768 2.67118623 2.58060526 1.4281739 ]\n"
+            "[1.91525669 2.5530428  1.08991944 2.21812333 2.37721008 2.28606039\n",
+            " 1.13298051 1.30522481 2.0468322  1.57316038 1.3985238  1.56837582\n",
+            " 2.80877398 5.70750945 4.30753859 3.07336411 2.32338373 2.67600234\n",
+            " 0.3253424  1.50593351 3.59129314 2.34969883 1.44158488 1.17125703\n",
+            " 5.04460439 1.48943052 2.33151374 3.12360203 2.58892702 0.99996589\n",
+            " 2.44299783 1.76813136 2.52528858 0.97030535 3.62837351 1.56454442\n",
+            " 2.16908155 1.36144344 0.15405127 0.88513636 1.37340485]\n"
           ]
         }
       ]
@@ -695,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ij7EhfdxgUK9",
-        "outputId": "100b25ad-7f00-44b8-fdda-968e4aab1a92"
+        "outputId": "102dba7c-a0f0-4470-aec1-d2f807d4716e"
       },
       "execution_count": 13,
       "outputs": [
@@ -703,7 +703,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([16923.07888213,  6260.53453724, 56216.69550446])"
+              "array([16746.98516196,  5517.53494847, 55820.80830624])"
             ]
           },
           "metadata": {},
@@ -753,7 +753,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XsHJjxOKoKx5",
-        "outputId": "6a624561-394d-4637-a872-2301dff6207f"
+        "outputId": "fe703026-ad5a-46c9-f634-933ebac3e714"
       },
       "execution_count": 15,
       "outputs": [
@@ -761,13 +761,33 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "65655181773.79428"
+              "63669719911.83621"
             ]
           },
           "metadata": {},
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##"
+      ],
+      "metadata": {
+        "id": "BPhnseGjNe8Y"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Carrying out the learning ( ***Schotatic Gradient Descent*** )"
+      ],
+      "metadata": {
+        "id": "2leouJK2NyOA"
+      }
     },
     {
       "cell_type": "code",
@@ -791,27 +811,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MCDMuBPlx-Y-",
-        "outputId": "5626154d-258b-4478-f388-931facb94512"
+        "outputId": "8f898318-533c-4524-cd32-ccf7fbbe2afa"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cost: 16104082590.02441\n",
-            "Cost: 1710990320.8028457\n",
-            "Cost: 1708233701.642507\n",
-            "Cost: 1708229704.961364\n",
-            "Cost: 1708229699.1667807\n",
-            "Cost: 1708229699.1583796\n",
-            "Cost: 1708229699.158367\n",
-            "Cost: 1708229699.158368\n",
-            "Cost: 1708229699.158368\n",
-            "Cost: 1708229699.1583676\n"
+            "Cost: 15265431537.426931\n",
+            "Cost: 2091179688.7165892\n",
+            "Cost: 2088774898.9014125\n",
+            "Cost: 2088771886.0992904\n",
+            "Cost: 2088771882.3247495\n",
+            "Cost: 2088771882.32002\n",
+            "Cost: 2088771882.3200145\n",
+            "Cost: 2088771882.3200147\n",
+            "Cost: 2088771882.3200145\n",
+            "Cost: 2088771882.3200145\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Final Weights"
+      ],
+      "metadata": {
+        "id": "pUY0enGVN8IS"
+      }
     },
     {
       "cell_type": "code",
@@ -823,19 +852,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TqjjJjbe5-By",
-        "outputId": "588a445b-9147-4b91-a6b8-cf17f2c44c5b"
+        "outputId": "0c10b197-557b-4e97-bf0c-f6ce57bce7f9"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([345033.58212871, 111066.37411722,  -2476.35012463])"
+              "array([342848.37237505, 105253.071568  ,  -2935.03475094])"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     },
@@ -852,19 +881,128 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G8mYLWFL7FdW",
-        "outputId": "89b8682b-91ce-41d2-c45e-638025a485b7"
+        "outputId": "99bf1835-f2c9-41f3-ac06-a2e5edfcf6e2"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "(10001,)\n",
-            "[5.70166170e+10 1.61040826e+10 5.41883549e+09 4.82037842e+09\n",
-            " 4.54693503e+09 4.33302174e+09 4.16118674e+09 4.02258251e+09\n",
-            " 3.91032599e+09 3.81896561e+09]\n"
+            "[4.54185480e+10 1.52654315e+10 5.46888741e+09 4.93296004e+09\n",
+            " 4.73046583e+09 4.57191061e+09 4.44175120e+09 4.33431781e+09\n",
+            " 4.24524805e+09 4.17102530e+09]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Prediction"
+      ],
+      "metadata": {
+        "id": "JjG1L4e6N_uq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = forward_prop(weights, X_test)"
+      ],
+      "metadata": {
+        "id": "0iGGmZP8OBHL"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WT42WFfVOaEa",
+        "outputId": "eabd2f6e-575e-4b1a-e3ce-457ee2f7ce61"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([233442.26676336, 228673.40953974, 292676.31040437, 484867.01705358,\n",
+              "       371056.05185326])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VhxnsB6WOcAF",
+        "outputId": "db997187-0a54-4d6f-d552-2ee717891458"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([229900., 239500., 368500., 579900., 449900.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Percentage error in predictions"
+      ],
+      "metadata": {
+        "id": "Es6bucBpO00n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "((predictions-y_test)/y_test) * 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SA3L7tNFOep8",
+        "outputId": "5fcdf619-3da1-4798-9c8b-66423188162c"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  1.54078589,  -4.52049706, -20.57630654, -16.38782255,\n",
+              "       -17.52477176])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     }
